2007-08-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (text-invisible-p): Rename from line-move-invisible-p.
	(line-move-invisible-p): Keep as an obsolete alias, just to be safe.
	(line-move-1, line-move-finish, line-move-to-column)
	(move-end-of-line, move-beginning-of-line): Use new name.

2007-08-22  Glenn Morris  <rgm@gnu.org>

	* files.el (backup-buffer-copy): Check backup directory is
	writable, to avoid infloop deleting old backup.

	* mail/rmail.el (rmail-movemail-variant-p): Call on load to set
	movemail related variables.
	(rmail-insert-inbox-text): Use only rmail-movemail-program, which
	will now be set before this is called.

2007-08-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/backquote.el (backquote-delay-process): Fix last change.

	* progmodes/ada-mode.el: Fix up comment style in header.
	(ada-check-emacs-version): Remove.
	(ada-mode): Set parse-sexp-* even if they don't exist: can't hurt.
	(ada-region-selected): Use (featurep 'xemacs) rather than contortions
	to try and quieten the byte-compiler.
	(ada-create-keymap): Use [(..)] keys, which work on both (X)Emacs.

	* vc.el (vc-annotate-warp-version): Don't use previous-line.

2007-08-20  Johannes Weiner  <hannes@saeurebad.de>  (tiny change)

	* emacs-lisp/lisp-mode.el (preceding-sexp): New fun, the code was
	extracted from `eval-last-sexp-1'.
	(eval-last-sexp-1): Call `preceding-sexp'.

2007-08-19  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (custom-deps, finder-data, autoloads, recompile)
	(progmodes/cc-mode.elc, mh-e/mh-loaddefs.el): Use $(emacs) rather
	than $(EMACS), so that EMACSLOADPATH is set.  Prevents any system
	shadow files messing up the compilation.

2007-08-18  Glenn Morris  <rgm@gnu.org>

	* progmodes/scheme.el (scheme-mode-variables):
	Set font-lock-comment-start-skip.

2007-08-18  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/ada-mode.el (ada-create-syntax-table):
	Move set-syntax-table from here to ...